ckanext/ngds/ngdsui/public/css/default.css
/* ... */
.slug-preview-prefix {
	margin-left:100px;
}

.select2-choices {

}

.select2-choices li {
	list-style: none;
}

.select2-container {
	display:inline;
	width:100px;
}

li.select2-search-field input{
	width:400px;
}

.input[type="file"] {
	width: auto;
	padding: initial;
	line-height: initial;
	background-color: #ffffff;
	background-color: initial;
	border: initial;
	-webkit-box-shadow: none;
	-moz-box-shadow: none;
	box-shadow: none;
	height: 28px;
	line-height: 28px;
}

.resource-upload-field input {
	opacity: 0;
	filter: alpha(opacity=0);
	position: absolute;
	top: 0;
	right: 0;
	z-index: 1;
	margin: 0;
	border: solid transparent;
	border-width: 100px 0 0 200px;
	cursor: pointer;
	direction: ltr;
	-moz-transform: translate(-300px, 0) scale(4);
}

.resource-upload-field {
	position: relative;
	overflow: hidden;
	vertical-align: bottom;
	margin-left:35px;
}


/* CKAN styles that need to be overriden for the autocomplete to look nice */

.select2-drop {
	
}



/* END CKAN STYLES THAT NEED TO BE OVERRIDEN*/ 


.ui-menu-item a {
	font-size:14px;
}

/*
	Extras styles
*/

div.controls select {
	width:464px;
}

div.controls select[id="field-extras-0-value"] {
	margin-left:0px;
}

.control-group {
	margin-left:0px;
}
/*
	End extras styles
*/

/* User Management */

div#manage-users table{
	font-family: Arial;
	font-size: 12px;
	margin: 5px;
	width: 750px;
	border-collapse: collapse;
	text-align: left;
}

div#manage-users th{
	font-size: 13px;
	font-weight: bold;
	padding: 4px 4px;
	background: #a8a8a8;
	border-bottom: 2px solid #a8a8a8;
}

div#manage-users td{
	border-bottom: 1px solid #ccc;
	color: #000000;
	padding: 6px 8px;
}

div#manage-users td,div#manage-users th{
	padding-top: 10px;
	padding-left: 5px;
	padding-bottom: 10px;
}

.ngds-button {
  display: block;
  width: 115px;
  height: 25px;
  background: #4E9CAF;
  padding: 10px;
  text-align: center;
  border-radius: 5px;
  color: white;
  font-weight: bold;
}


/* Login Page Styles - Need to be revised and removed*/

div#login-page {
	padding-top: 30px;
	height: 400px;
	display:table;
	background: #ffffff url("../../../base/images/nav.png") 0 0 repeat-y;
}

div#login-page .primary-content {
  width: 750px;
  padding-left: 40px;
  display:table-cell;
  /*float: right;*/
}
div#login-page .secondary-content {
  width: 220px;
  display:table-cell;
  position:relative;
  vertical-align:top;
/*  float: left; */ 	
}

.align-top {
	/*position:absolute;*/
}

div#login-page section {
	padding-left: 3px;
	padding-bottom: 10px;
	position:relative;
}

.control-medium input,
.control-medium select,
.control-medium textarea {
  width: 320px;
}

.module-heading {
  margin: 0;
  padding: 7px 25px;
  font-size: 14px;
  line-height: 1.3;
  background-color: #f6f6f6;
  border-top: 1px solid #dddddd;
  border-bottom: 1px solid #dddddd;
}

.module-heading .action {
  float: right;
  color: #888888;
  font-size: 11px;
  text-decoration: underline;
}


.page-heading {
  margin-top: 0;
  margin-bottom: 16px;
}

.form-horizontal input {
margin-left: 40px;
	  display: inline-block;
  *display: inline;
  /* IE7 inline-block hack */

  *zoom: 1;
  margin-bottom: 0;
  vertical-align: middle;
}


.form-horizontal .control-group {
  margin-bottom: 20px;
  text-align: left;
  *zoom: 1;
}
.form-horizontal .control-group:before,
.form-horizontal .control-group:after {
  display: table;
  content: "";
  line-height: 0;
}
.form-horizontal .control-group:after {
  clear: both;
}

.form-horizontal .controls {
  *display: inline-block;
  *padding-left: 20px;
  margin-left: 180px;
  *margin-left: 0;
}

.form-horizontal .help-block {
  margin-bottom: 0;
}
.form-horizontal input + .help-block,
.form-horizontal select + .help-block,
.form-horizontal textarea + .help-block,
.form-horizontal .uneditable-input + .help-block,
.form-horizontal .input-prepend + .help-block,
.form-horizontal .input-append + .help-block {
  margin-top: 10px;
}
.form-horizontal .form-actions {
  padding-left: 180px;

}


.form-horizontal .control-label {
  width: 140px;
  line-height: 1.3;
  padding-top: 9px;
  text-align: right;
  float: left;
  left:5px;
}
.form-horizontal .control-large input,
.form-horizontal .control-large .control-label {
  font-size: 18px;
  line-height: 2;
}
.form-horizontal .control-large .control-label {
  padding-top: 10px;
}
.form-horizontal .controls {
  margin-left: 130px;
}
.form-horizontal .control-medium {
  width: 165px;
}

.form-horizontal .form-actions {
  padding-left: 25px;
  padding-right: 25px;
}


.alert {
  padding: 8px 35px 8px 14px;
  margin-bottom: 20px;
  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
  background-color: #fcf8e3;
  border: 1px solid #fbeed5;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
}
.alert,
.alert h4 {
  color: #c09853;
}
.alert h4 {
  margin: 0;
}
.alert .close {
  position: relative;
  top: -2px;
  right: -21px;
  line-height: 20px;
}
.alert-success {
  background-color: #dff0d8;
  border-color: #d6e9c6;
  color: #468847;
}
.alert-success h4 {
  color: #468847;
}
.alert-danger,
.alert-error {
  background-color: #f8f0f0;
  border-color: #c6898b;
  color: #b55457;
}
.alert-danger h4,
.alert-error h4 {
  color: #b55457;
}
.alert-info {
  background-color: #d9edf7;
  border-color: #bce8f1;
  color: #3a87ad;
}
.alert-info h4 {
  color: #3a87ad;
}
.alert-block {
  padding-top: 14px;
  padding-bottom: 14px;
}
.alert-block > p,
.alert-block > ul {
  margin-bottom: 0;
}
.alert-block p + p {
  margin-top: 5px;
}





/*Login page end*/

.wrapper {
  *zoom: 1;
  background-color: #FFF;
  margin-left: -1px;
  margin-right: -1px;
  border: 1px solid #cccccc;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  -webkit-box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.05);
  -moz-box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.05);
  box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.05);
  position: relative;
  
  margin-bottom: 10px;
}
/* ... */

